# 3p-xmlrpc-epi

./: .hgtags  BuildParams  README.txt  autobuild.xml  build-cmd.sh  build.bash  excise_expat.patch  gcc4_xml_element.patch  remove_iconv.patch
xmlrpc-epi/: xmlrpcepi.sln  xmlrpcepi.vcxproj
xmlrpc-epi-0.51/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  configure  configure.in  xmlrpcepi.dsp  xmlrpcepi.vcproj
xmlrpc-epi-0.51/expat/: Makefile.am  Makefile.in
xmlrpc-epi-0.51/expat/gennmtab/: gennmtab
xmlrpc-epi-0.51/expat/xmlparse/: .cvsignore  Makefile.am  Makefile.in  xmlparse.c
xmlrpc-epi-0.51/expat/xmltok/: .cvsignore  Makefile.am  Makefile.in
xmlrpc-epi-0.51/expat/xmlwf/: xmlwf
xmlrpc-epi-0.51/sample/: Makefile.am  Makefile.in  client.c  hello_client.c  hello_server.c  sample.c  server.c  server_compliance_test.c
xmlrpc-epi-0.51/src/: .swp  Makefile.am  Makefile.in  base64.c  encodings.c  queue.c  xml_element.c  xml_to_xmlrpc.c  xmlrpc.c  xmlrpc_introspection.c
xmlrpc-epi-0.54.1/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  xmlrpcepi.sln  xmlrpcepi.vcxproj
xmlrpc-epi-0.54.1/autom4te.cache/: output.1
xmlrpc-epi-0.54.1/src/: Makefile.in  encodings.c  queue.h  xml_to_xmlrpc.c
xmlrpc-epi/autom4te.cache/: requests  traces.1
xmlrpc-epi/m4/: ax_lib_expat.m4
xmlrpc-epi/src/: Makefile.am  Makefile.in  xmlrpc_introspection_private.h
